# etranth_hw3

./: CMakeLists.txt  Person.cpp  Person.h  Polygon.cpp  Polygon.h  ProspectiveStudent.cpp  ProspectiveStudent.h  Rectangle.cpp  Rectangle.h  Student.cpp  Student.h  StudentEmployee.cpp  StudentEmployee.h  Triangle.cpp  Triangle.h  main.cpp
