cmake_minimum_required(VERSION 3.20)
project(Etrantha_HW3_QY)

set(CMAKE_CXX_STANDARD 14)

add_executable(Etrantha_HW3_QY main.cpp Person.cpp Person.h Polygon.cpp Polygon.h Student.cpp Student.h StudentEmployee.cpp StudentEmployee.h ProspectiveStudent.cpp ProspectiveStudent.h Rectangle.cpp Rectangle.h Triangle.cpp Triangle.h)
